# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml  res.json  setup.cfg
.github/workflows/: pyci.yml
config_files_examples/yaml/: simple_file2.yml
files_examples/json/: complex_file1.json  complex_file2.json
gendiff/: __init__.py  args_parser.py  config_file_loader.py  diff_functions.py  diff_generator.py  diff_structure_generator.py  diff_tree.py  file_loader.py  internal_structure_generator.py  renderer.py
gendiff/example_config_files/: file1.yml  file2.json  file2.yml
gendiff/renderers/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff_functions.py  test_diff_generator.py  test_diff_structure_generator.py  test_diff_tree.py  test_generate_diff.py  test_internal_structure_generator.py  utils.py
tests/fixtures/: file1.json  file2.yml
tests/fixtures/diff/: json.txt  plain.txt
tests/fixtures/diff_outputs/: empty_diff_file1.txt  empty_diff_rec_file1.txt  file2_diff_file1.txt  json_file1_diff_empty.txt  plain_file1_diff_empty.txt  plain_file1_diff_plain_file2.txt  plain_file1_diff_rec_file1.txt  rec_file1_diff_rec_file2.txt  recurse_file1_diff_empty.txt  recurse_file1_diff_recurse_file2.txt  recurse_file2_diff_recurse_file1.txt  stylish_file1_diff_empty.txt
tests/fixtures/diff_structures/: file1_diff_file2.json  plain_file1_diff_plain_file2.json  rec_file1_diff_rec_file2.json
tests/fixtures/internal_structures/: file1_diff_empty.json  file1_diff_file2.json  plain_file1_diff_plain_file2.json  rec_file1_diff_rec_file2.json
(+15 files in other folders)
