[tool.poetry]
name = "vetalpaprotsky_gendiff"
version = "0.6.1"
description = "Console utility for showing config files differences."
license = "MIT"
readme = "README.md"
authors = ["Vitalii Paprotskyi <vetalpaprotsky@gmail.com>"]
repository = "https://github.com/vetalpaprotsky/gendiff"
packages = [
  { include = "gendiff" },
]
classifiers = [
  "Environment :: Console",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.1.0"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

